* FEA#7076 Add general configuration entrypoint
* FEA#6377 Move initialisation of global search and translatable languages from test case to a wizard
* FEA#7015 Add a technical function to set a readonly condition on all fields of a model
* BUG#6993 Removing simple json import
* BUG#6475 The third parameter of coog-daily is now an optional argument which represents TODAY_DATE.
* FEA#6936 Add a batch parameter to avoid systematic split
* FEA#6236 Add a new command to reexec a batch (replay failed jobs without split)
* FEA#6696 Add a filtering rule on event type actions
* OTH#0000 Add inheritance to dynamically support readonly transaction using ServerContext
* BUG#6786 Limit global search query result size
* FEA#6591 Add coog's version in the user status bar
* OTH#0000 Do not register non model batch classes in the pool
* OTH#0000 Add 'delete_missing' flag on actives contract suspensions
* FEA#6575 Add an Interval operator for SQL operations
* OTH#0000 Fix translation of asynchronous events
* OTH#0000 Fix typo in the post commit function call decorator
* BUG#6440 No need to overwrite constrained fields in copies if they are empty
* FEA#6406 Allow to keep lines on JSON import
* OTH#0000 Fix typo in retrieving error message from job fail handler
* OTH#0000 Fix typo in function renaming
* FEA#6392 Notify event on success or failure of asynchronous task processing
* FEA#6355 Add indemnifications creation batch to batch daily chains
* OTH#6373 Post transaction commit enqueue
* FEA#0000 Add persistent wizard context

Version 1.12 - 2017-04-28* FEA#0000 New option to beautify json exported file
* FEA#0000 Add tabs to identify enabled/disabled event type actions
* FEA#0000 Add active field to event_type_action model
* FEA#0000 Remove basic benchmarking tool (moved to a standalone module)
* FEA#0000 Add configurable detail mixin

Version 1.10 - 2016-11-02
* FEA#0000 Add basic benchmarking tool to analyze server performance